--- a/swig/SConscript
+++ b/swig/SConscript
@@ -13,8 +13,8 @@ def runCommand(cmd):
 		p = subprocess.Popen(cmd, stdout=subprocess.PIPE)
 		(output, err) = p.communicate()
 		return output
-	except Exception,e:
-		print e
+	except Exception as e:
+		print(e)
 		return ""
 
 def getRbConf(name):
@@ -25,7 +25,7 @@ def buildRbModule():
 	conf = Configure(env, conf_dir = dev.get_build_path('.sconf_temp'), log_file = dev.get_build_path('config.log'), clean = False, help = False)
 
 	if not runCommand([dev.env['ruby'], '-v']):
-		print "Ruby not found, skipping ruby module"
+		print("Ruby not found, skipping ruby module")
 		return
 
 	env.Append(SWIGFLAGS=['-c++','-Wall','-ruby','-autorename'])
@@ -34,22 +34,22 @@ def buildRbModule():
 	
 	libdir = getRbConf("libdir")
 	if not libdir:
-		print "Ruby libdir not found, skipping ruby module"
+		print("Ruby libdir not found, skipping ruby module")
 		return 
 	
 	incdir = getRbConf("rubyhdrdir")
 	if not incdir:
-		print "Ruby hdrdir not found, skipping ruby module"
+		print("Ruby hdrdir not found, skipping ruby module")
 		return
 
 	arch = getRbConf("arch")
 	if not arch:
-		print "Ruby arch not found, skipping ruby module"
+		print("Ruby arch not found, skipping ruby module")
 		return
 
 	soname = getRbConf("RUBY_SO_NAME")
 	if not soname:
-		print "Ruby RUBY_SO_NAME not found, skipping ruby module"
+		print("Ruby RUBY_SO_NAME not found, skipping ruby module")
 		return
 
 	env.Append(LIBPATH=[libdir])
@@ -57,7 +57,7 @@ def buildRbModule():
 	env.Append(LIBS=[soname, 'adchpp'])
 		
 	if not conf.CheckCHeader('ruby.h'):
-		print "ruby.h not found, skipping ruby module"
+		print("ruby.h not found, skipping ruby module")
 		conf.Finish()
 		return
 	conf.Finish()
@@ -94,7 +94,7 @@ def buildPyModule():
 	version = sys.version[0] + sys.version[2]
 	
 	if version not in ('25','26','27'):
-		print 'Invalid Python version: ' + version + ' - skipping Python module'
+		print('Invalid Python version: ' + version + ' - skipping Python module')
 		return
 
 	env.Append(CPPPATH=['#'])
@@ -127,7 +127,7 @@ def buildPyModule():
 			break
 		
 	if not found:
-		print "Python.h not found, not building python extension"
+		print ("Python.h not found, not building python extension")
 		return
 		
 	if dev.is_win32():
@@ -171,7 +171,7 @@ def buildPHPModule():
 	env, target, sources = dev.prepare_build(source_path, 'php_adchpp', 'php.i')
 
 	if not dev.is_win32():
-		print 'No Linux support for PHP extensions yet'
+		print('No Linux support for PHP extensions yet')
 		# TODO add Linux support (see TODO below)
 		return
 
@@ -182,10 +182,10 @@ def buildPHPModule():
 	if dev.is_win32():
 		if env['CC'] == 'cl': # MSVC
 			if not os.path.exists(env.File(php_path + 'lib/php5.lib').abspath):
-				print 'No php5.lib file, skipping PHP'
+				print('No php5.lib file, skipping PHP')
 				return
 		else:
-			print 'Skipping the PHP module, use MSVC or Linux'
+			print('Skipping the PHP module, use MSVC or Linux')
 			return
 
 	bin_dir = dev.get_build_path('bin')
@@ -213,7 +213,7 @@ if 'ruby' in dev.env['langs']:
 
 if 'python' in dev.env['langs']:
 	if   dev.env['PLATFORM'] == 'win32' and dev.env['arch'] != 'x86':
-		print 'Skipping Python module because build platform is Windows and ARCH != x86'
+		print('Skipping Python module because build platform is Windows and ARCH != x86')
 	else:
 		buildPyModule()
 
