--- a/adchpp/SConscript
+++ b/adchpp/SConscript
@@ -43,9 +43,9 @@ if 'HAVE_OPENSSL' in env['CPPDEFINES']:
 	if dev.is_win32():
 		if env['CC'] == 'cl': # MSVC
 			if env['mode'] == 'debug':
-				env.Prepend(LIBS = ['ssleay32d', 'libeay32d'])
+				env.Prepend(LIBS = ['libssl32d', 'libcrypto32d'])
 			else:
-				env.Prepend(LIBS = ['ssleay32', 'libeay32'])
+				env.Prepend(LIBS = ['libssl32', 'libcrypto32'])
 		else:
 			env.Prepend(LIBS = ['ssl', 'crypto'])
 		env.Append(LIBS = ['gdi32']) # something in OpenSSL uses CreateDC etc...
